# web3_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
src/parsers/: example-opcode_file  parse_opcode.py
src/web3_tools/: cli.py
src/web3_tools/decoders/: decode_signatures.py
