[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web3_tools"
version = "0.1.0"
description = "Simple web3 tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "NoobishDev", email = "flip.mancer@proton.me" }
]
dependencies = [
    "aiohttp>=3.12.15",
    "inquirer>=3.4.1",
    "typer>=0.19.2"
]

[project.urls]
Homepage = "https://github.com/flipmancer/web3-tools"
Repository = "https://github.com/flipmancer/web3-tools"